syntax = "proto3";
import "tcp.proto";


package pb;

message DeliverMessageReq {
    int64 device_id = 1; // 设备id
    Message message = 2; // 数据
}
message DeliverMessageResp {
}

service ConnInt {
    //  消息投递
    rpc DeliverMessage (DeliverMessageReq) returns (DeliverMessageResp);
}